Initial commit - StudentApp

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
+cat <<EOF > .gitignore
+# Terraform
 .terraform/
+**/.terraform/
+terraform.tfstate
+terraform.tfstate.*
+*.lock.hcl
+
+# Maven
+target/
+
+# Env
+.env
+EOF
