--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-# Terraform
 .terraform/
-*.tfstate
-*.tfstate.*
-terraform.tfvars
-terraform.tfvars.json
-.crash.log
-terraform.log
-
-# OS
-.DS_Store
-*.swp
+terraform.tfstate
+terraform.tfstate.backup
+*.tfvars
